# SignConnect

./: .coverage  .coverage.sprout.local.33668.XWYZvPMx  .env.example  .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  alembic.ini  backend.Dockerfile  docker-compose.test.yml  docker-compose.yml  firebase.py  frontend.Dockerfile  package.json  pyproject.toml
.github/workflows/: ci.yml
.tmp.driveupload/: 215  257  261  333  355
frontend/: .env.example  Dockerfile  index.html  package-lock.json  script.js  style.css  vite.config.js
frontend/src/: App.css  App.jsx  firebaseConfig.js
frontend/src/components/Auth/: Auth.css  Auth.jsx
frontend/src/components/Controls/: Controls.css  Controls.jsx
frontend/src/components/ConversationView/: ConversationView.css  ConversationView.jsx
frontend/src/components/Settings/: Preferences.css  Preferences.jsx  QuestionItem.css  QuestionItem.jsx  Scenarios.css  Scenarios.jsx  Settings.css  Settings.jsx
frontend/src/components/Suggestions/: Suggestions.css  Suggestions.jsx
frontend/src/components/TranscriptionDisplay/: TranscriptionDisplay.css  TranscriptionDisplay.jsx
frontend/src/components/UserInput/: UserInput.css  UserInput.jsx
frontend/src/config/: environment.js
frontend/src/services/: api.js
src/alembic/: env.py
src/alembic/versions/: b5e40b083a75_create_initial_tables.py
src/signconnect/: app_factory.py  crud.py  dependencies.py  firebase.py  main.py  mainTest.py  schemas.py  security.py
src/signconnect/core/: config.py  logging.py
src/signconnect/db/: database.py  models.py  test_database.py
src/signconnect/llm/: client.py
src/signconnect/routers/: firebase.py  questions.py  scenarios.py  users.py  websockets.py
src/signconnect/services/: websocket_manager.py
tests/: conftest.py  test_llm_client.py  test_preferences.py  test_questions.py  test_scenarios.py  test_users.py  test_websockets.py
tests/integration/: test_vector_search.py  test_websockets.py
tests/services/: test_websocket_manager.py
