[project]
name = "signconnect"
version = "0.1.0"
description = ""
authors = [
    {name = "HowDiggy",email = "jauregui.paulo@gmail.com"}
]
readme = "README.md"
packages = [{include = "signconnect", from = "src"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "google-cloud-speech (>=2.33.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
