[project]
name = "signconnect"
version = "0.1.0"
description = ""
authors = [
    {name = "HowDiggy",email = "jauregui.paulo@gmail.com"}
]
readme = "README.md"
packages = [{include = "signconnect", from = "src"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "google-cloud-speech (>=2.33.0,<3.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "firebase-admin (>=6.9.0,<7.0.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "sentry-sdk[fastapi] (>=2.35.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = {extras = ["http2"], version = "^0.28.1"}
pytest-docker = ">=2.0.0"
pytest-cov = "^6.2.1"
pre-commit = "^4.2.0"
pytest-asyncio = "^1.1.0"
alembic = "^1.16.4"

[tool.pytest.ini_options]
pythonpath = ["src"]
# Add these lines to register your custom marker
markers = [
    "integration: marks tests as integration tests (requires docker)",
]
asyncio_mode= "auto"
